2025-08-05T01:02:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16737839335 # 726
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 588 981 / 599 992
* notice: next accum: outdated-unq outdated-all / unq all: 589 982 / 601 995
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2025-07-22] / [2025-08-04]

2025-08-04T01:06:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16711597066 # 725
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-04
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 588 981 / 598 991
* notice: next accum: outdated-unq outdated-all / unq all: 588 981 / 599 992
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-03]

2025-08-03T01:07:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16699563188 # 724
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-03
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 586 979 / 598 991
* notice: next accum: outdated-unq outdated-all / unq all: 588 981 / 598 991
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-19 2025-07-20] / []

2025-08-02T00:58:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16688120066 # 723