@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-05T01:02:53Z",
-  "count_outdated" : 982,
-  "uniques_outdated" : 589,
-  "count" : 995,
-  "uniques" : 601,
+  "timestamp" : "2025-08-06T01:01:50Z",
+  "count_outdated" : 983,
+  "uniques_outdated" : 590,
+  "count" : 996,
+  "uniques" : 602,
   "clones" : [
-    {
-      "timestamp": "2025-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-24T00:00:00Z",
       "count": 1,
@@ -94,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
