@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-07-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-07-24T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -51,6 +46,11 @@
       "timestamp": "2025-08-04T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
