@@ -1,3 +1,12 @@
+2025-08-06T01:01:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16764875348 # 727
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-06
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 589 982 / 601 995
+* notice: next accum: outdated-unq outdated-all / unq all: 590 983 / 602 996
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-07-23] / [2025-08-05]
+
 2025-08-05T01:02:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16737839335 # 726
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
